<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
<!--    <ImageView-->
<!--        android:src="@color/design_default_color_error"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="64dp"-->
<!--        android:scaleType="center"-->
<!--        android:background="#FFFFBB33"-->
<!--        android:contentDescription="@string/app_name" />-->

    <EditText
        android:id="@+id/personaje"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/personaje" />

    <EditText
        android:id="@+id/apodo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:hint="@string/apodo"
        android:inputType="text" />
    <Switch
        android:id="@+id/isEstudiante"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:hint="@string/estudiante"
         />

    <EditText
        android:id="@+id/casa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:hint="@string/casa"
        android:inputType="text" />

    <EditText
        android:id="@+id/interprete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:hint="@string/interprete"
        android:inputType="text" />

    <EditText
        android:id="@+id/hijos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"

        android:layout_marginTop="4dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:hint="@string/hijos"
        android:inputType="text" />

    <EditText
        android:id="@+id/imagen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:hint="@string/imagen"
        android:inputType="text" />
</LinearLayout>